# CG-Animation

./: .gitignore  CMakeLists.txt  GUIA_EXPANSAO.md  LICENSE  Makefile  Math3.cpp  README.md  config.h.in
Shaders/: Image.fs  default.fs
include/: Light.h  camera.h  config.h  cube.h  main.h  optimization.h  renderer.h  shader.h  texture.h  window.h
include/MarchingCubes/: MarchingCubesTable.h  Polygonizer.h
include/Meshes/: Mesh.h
include/Meshes/Custom/: Sphere.h  cube.h
include/Object/: SceneObject.h
include/Object/Components/: IComponent.h  IInstanceImplementableComponent.h
include/Object/Components/Custom/: RotationComponent.h  SinWithOffsetXZTrnaslationComponent.h  SinWithOffsetYTranslationComponent.h
include/Object/Core/: Material.h  Transform.h
include/Object/Custom/: CubeObject.h  SphereObject.h
include/Object/Custom/Letters/: AnyLetterObject.h  LetterAObject.h  LetterCObject.h
include/Object/Custom/Numbers/: AnyNumberObject.h
include/Object/Meshes/: CSGImplementable.h  Mesh.h
include/Object/Meshes/Custom/: Cube.h  InvisibleMesh.h  Sphere.h
include/Object/Meshes/Custom/Letters/: LetterAMesh.h  LetterCMesh.h  LetterEMesh.h  LetterHMesh.h  LetterNMesh.h  LetterOMesh.h  LetterSMesh.h
include/Object/Meshes/Custom/Numbers/: Number2Mesh.h
include/Scene/: Scene.h
include/Utility/Constants/: EngineLimits.h  MathConsts.h
include/glad/: glad.h
src/: camera.cpp  cube.cpp  main.cpp  renderer.cpp  shader.cpp  texture.cpp  window.cpp
src/MarchingCubes/: Polygonizer.cpp
src/Meshes/: Mesh.cpp
src/Meshes/Custom/: Sphere.cpp  cube.cpp
src/Object/: SceneObject.cpp
src/Object/Components/Custom/: RotationComponent.cpp  SinWithOffsetXZTrnaslationComponent.cpp  SinWithOffsetYTranslationComponent.cpp
src/Object/Custom/: CubeObject.cpp  SphereObject.cpp
src/Object/Custom/Letters/: AnyLetterObject.cpp  LetterAObject.cpp  LetterCObject.cpp
src/Object/Custom/Numbers/: AnyNumberObject.cpp
src/Object/Meshes/: InvisibleMesh.cpp  Mesh.cpp
src/Object/Meshes/Custom/: Cube.cpp  Sphere.cpp  cube.cpp
src/Object/Meshes/Custom/Letters/: LetterAMesh.cpp  LetterCMesh.cpp  LetterEMesh.cpp  LetterHMesh.cpp  LetterNMesh.cpp  LetterOMesh.cpp  LetterSMesh.cpp
src/Object/Meshes/Custom/Numbers/: Number2Mesh.cpp
src/Scene/: Scene.cpp
